[package]
name = "readme"
description = "cli tool to extract markdown text from source code files"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
handlebars = "4.3.3"
pathdiff = "0.2.1"
regex = "1.6.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
walkdir = "2.3.2"
